# rust-autologon-cli

./: Cargo.toml  my_cert.pem
src/: main.rs
src/services/: mod.rs  registry.rs  rsa.rs
