[package]
name = "cli-autologon-install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
reqwest = "0.11.17"

rustls = "0.21.1"
winreg = "0.50.0"
subtle = "2.4.1"
digest = "0.10.6"
rand = "0.8.5"

[dependencies.rsa]
version = "0.9.2"
features = ["sha2", "pkcs5", "sha2"]
subtle = { version = "2.4.1", optional = true }
